// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/createList should add a todo to the list 1`] = `
Object {
  "error": null,
  "fetchStatus": "idle",
  "ids": Array [
    1,
    2,
    3,
    5,
  ],
}
`;

exports[`reducers/createList should add fetched todos saves error message 1`] = `
Object {
  "error": [Error: Boom!],
  "fetchStatus": "idle",
  "ids": Array [],
}
`;

exports[`reducers/createList should add fetched todos to empty list 1`] = `
Object {
  "error": null,
  "fetchStatus": "idle",
  "ids": Array [
    1,
    2,
    3,
  ],
}
`;

exports[`reducers/createList should add fetched todos to non-empty list 1`] = `
Object {
  "error": null,
  "fetchStatus": "idle",
  "ids": Array [
    4,
    5,
    6,
  ],
}
`;

exports[`reducers/createList should add todo save error message 1`] = `
Object {
  "error": [Error: Boom!],
  "fetchStatus": "idle",
  "ids": Array [
    1,
    2,
    3,
  ],
}
`;

exports[`reducers/createList should add todo to empty list 1`] = `
Object {
  "error": null,
  "fetchStatus": "idle",
  "ids": Array [
    4,
  ],
}
`;

exports[`reducers/createList should add todo to non-empty list 1`] = `
Object {
  "error": null,
  "fetchStatus": "idle",
  "ids": Array [
    1,
    2,
    3,
    4,
  ],
}
`;

exports[`reducers/createList should remove a todo from the list 1`] = `
Object {
  "error": null,
  "fetchStatus": "idle",
  "ids": Array [
    2,
    3,
  ],
}
`;

exports[`reducers/createList should toggle todo saves error message 1`] = `
Object {
  "error": [Error: Boom!],
  "fetchStatus": "idle",
  "ids": Array [
    1,
    2,
    3,
  ],
}
`;
